discussion/kv_engine/134612/134612_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

cccp

Change-Id: I871f521cc3505d70063f95b35f68ca5624687412

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2020-08-19 08:39:19.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-08-19 09:08:37.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25675/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/cluster_framework/clustermapmanager.cc:126:38:
error: "ipv4" in capture list does not name a variable
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25675/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3854/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/clustermapmanager.cc:126:38: error: "ipv4" in capture list does not name a variable [clang-diagnostic-error]
        cluster.iterateNodes([&map, &ipv4](const cb::test::Node& node) {
                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/clustermapmanager.cc:128:29: error: "ipv4" in capture list does not name a variable [clang-diagnostic-error]
                    [&map, &ipv4](const MemcachedConnection& c) {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/clustermapmanager.cc:136:46: error: reference to local binding "ipv4" declared in enclosing lambda expression [clang-diagnostic-error]
                            me["hostname"] = ipv4.front();
                                             ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/clustermapmanager.cc:124:15: note: "ipv4" declared here
        auto [ipv4, ipv6] = cb::test::Cluster::getIpAddresses();
              ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3854/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/cluster_framework/clustermapmanager.cc:126:38:
error: "ipv4" in capture list does not name a variable [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3854/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29640/ : FAILURE

Compile error at ..\kv_engine\cluster_framework\clustermapmanager.cc(126): error C3481: "ipv4": lambda capture variable not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29640/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5063/ : FAILURE

The warnings threshold for this job was exceeded - <a href="warningsResult">2 warnings</a> found. ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/5063/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/5154/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4179/ : FAILURE

Compile error at [2020-08-19T08:46:04.225Z] ../kv_engine/cluster_framework/clustermapmanager.cc:126:38:
error: "ipv4" in capture list does not name a variable
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/4179/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5250/ : FAILURE

Failure of a CTest test [2020-08-19T08:50:21.089Z] 312/391 Test #295: memcached_testapp.default.TransportProtocols/BucketTest .....................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5250/ )

ThreadSanitizer issue: data race /usr/local/include/c++/7.3.0/chrono:341 in std::chrono::duration<long, std::ratio<1l, 1000000000l> >::count() const  ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/5250/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12967/ : FAILURE

AddressSanitizer issue: new-delete-type-mismatch (/home/couchbase/jenkins/workspace/kv_engine.ASan-UBSan_master/install/lib/libasan.so.4+0xdbd38) in operator delete(void*, unsigned long) ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12967/ )

Failure of a CTest test [2020-08-19T09:01:09.661Z] 391/396 Test #393: cluster_test ................................................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12967/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/2378/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2020-08-19 19:31:06.000000000
Message: 
Abandoned
----------------------------------------------------------------------------------------------------------------------
